--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 
 .App {
   display: flex;
@@ -7,6 +18,7 @@
 
 .info {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -17,4 +29,19 @@ form {
 
 .container {
   margin: 0 15px;
+}
+
+.chart {
+  width: 100%;
+  margin: 0 auto;
+  padding: 50px;
+  min-height: 500px;
+  height: 50vh;
+}
+
+.credit {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 12px;
 }
